--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="main.css" rel="stylesheet">
     <title>Birthday-strap</title>
 </head>
-<body>
-    <h1>Birthday-strap</h1>
+<body class="container">
+    <h1 class="display-1 text-primary">Birthday-strap&nbsp;🎂</h1>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
